feat: create ticket and setup send event for seats update
